Initialize cursor in PageView scrollbars with ArrowCursor

BUG: 334798
REVIEW: 130131